--- a/src/Presentation.WebApp/Views/Home/MisDatos.cshtml
+++ b/src/Presentation.WebApp/Views/Home/MisDatos.cshtml
@@ -13,11 +13,11 @@
         <h1 class="h4"><i class="fas fa-user-plus"></i> Actualizar mis datos personales</h1>
     </div>
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="card-body" style="background-color: #e5e5e5 !important; font-size: 13px;">
+    <div class="card-body" style=" font-size: 13px;">
         <div class="row">
             <div class="col">
                 <div class="text-center">
-                    <img id="miFoto" height="200" width="270" style="border-radius:120px !important;" src="@Model.FotoT" class="rounded">
+                    <img id="miFoto" height="240" width="270" style="border-radius:120px !important;" src="@Model.FotoT" class="rounded">
                 </div>
 
             </div>
