--- a/src/Presentation.WebApp/Views/Citas/ReporteCitas.cshtml
+++ b/src/Presentation.WebApp/Views/Citas/ReporteCitas.cshtml
@@ -1,33 +1,140 @@
 ﻿@{
     Layout = null;
 }
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 @model List<Domain.Cita>
 
+<div class="container">
 
-<h1>Reporte Citas</h1>
+    <h1>Reporte Citas</h1>
 
-<table>
-    <thead>
-        <tr>
-            <th>Nombre</th>
-            <th>Fecha</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var cita in Model)
-        {
+    <table class="table table-bordered">
+        <thead>
             <tr>
-                <td>
-                    @cita.NombrePaciente
-                </td>
-                <td>
-                    @cita.Fecha
-                </td>
+                <th>Nombre</th>
+                <th>Fecha</th>
             </tr>
-        }
+        </thead>
+        <tbody>
+            @foreach (var cita in Model)
+            {
+                <tr>
+                    <td>
+                        @cita.NombrePaciente
+                    </td>
+                    <td>
+                        @cita.Fecha
+                    </td>
+                </tr>
+            }
 
 
-    </tbody>
-</table>
+        </tbody>
+    </table>
 
+
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Fecha</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var cita in Model)
+            {
+                <tr>
+                    <td>
+                        @cita.NombrePaciente
+                    </td>
+                    <td>
+                        @cita.Fecha
+                    </td>
+                </tr>
+            }
+
+
+        </tbody>
+    </table>
+
+
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Fecha</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var cita in Model)
+            {
+                <tr>
+                    <td>
+                        @cita.NombrePaciente
+                    </td>
+                    <td>
+                        @cita.Fecha
+                    </td>
+                </tr>
+            }
+
+
+        </tbody>
+    </table>
+
+
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Fecha</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var cita in Model)
+            {
+                <tr>
+                    <td>
+                        @cita.NombrePaciente
+                    </td>
+                    <td>
+                        @cita.Fecha
+                    </td>
+                </tr>
+            }
+
+
+        </tbody>
+    </table>
+
+
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Fecha</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var cita in Model)
+            {
+                <tr>
+                    <td>
+                        @cita.NombrePaciente
+                    </td>
+                    <td>
+                        @cita.Fecha
+                    </td>
+                </tr>
+            }
+
+
+        </tbody>
+    </table>
+
+
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
