--- a/src/Presentation.WebApp/Views/Citas/ReporteCitas.cshtml
+++ b/src/Presentation.WebApp/Views/Citas/ReporteCitas.cshtml
@@ -3,33 +3,25 @@
 }
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-@model List<Domain.Cita>
+@model Application.Dtos.DtoReporteCitas
 
 <div class="container">
 
     <h1>Reporte Citas</h1>
 
     <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Nombre</th>
-                <th>Fecha</th>
-            </tr>
-        </thead>
         <tbody>
-            @foreach (var cita in Model)
-            {
-                <tr>
-                    <td>
-                        @cita.NombrePaciente
-                    </td>
-                    <td>
-                        @cita.Fecha
-                    </td>
-                </tr>
-            }
+            <tr>
+                <td>Generado por: </td>
+                <td>@Model.Usuario</td>
+                <td><img alt="logo" width="100" height="100" src="https://www.elsoldezacatecas.com.mx/local/e68h3c-hospital-del-imss-de-zacatecas/alternates/LANDSCAPE_768/Hospital%20del%20IMSS%20de%20Zacatecas" /></td>
 
-
+            </tr>
+            <tr>
+                <td>Fecha de reporte: </td>
+                <td>@Model.FechaIncioReporte</td>
+                <td>@Model.FechaFinReporte</td>
+            </tr>
         </tbody>
     </table>
 
@@ -39,10 +31,12 @@
             <tr>
                 <th>Nombre</th>
                 <th>Fecha</th>
+                <th>Estatus</th>
+                <th>Área de atención</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var cita in Model)
+            @foreach (var cita in Model.CitasCerradas)
             {
                 <tr>
                     <td>
@@ -51,80 +45,11 @@
                     <td>
                         @cita.Fecha
                     </td>
-                </tr>
-            }
-
-
-        </tbody>
-    </table>
-
-
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Nombre</th>
-                <th>Fecha</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var cita in Model)
-            {
-                <tr>
                     <td>
-                        @cita.NombrePaciente
+                        @cita.EstatusCita
                     </td>
                     <td>
-                        @cita.Fecha
-                    </td>
-                </tr>
-            }
-
-
-        </tbody>
-    </table>
-
-
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Nombre</th>
-                <th>Fecha</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var cita in Model)
-            {
-                <tr>
-                    <td>
-                        @cita.NombrePaciente
-                    </td>
-                    <td>
-                        @cita.Fecha
-                    </td>
-                </tr>
-            }
-
-
-        </tbody>
-    </table>
-
-
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Nombre</th>
-                <th>Fecha</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var cita in Model)
-            {
-                <tr>
-                    <td>
-                        @cita.NombrePaciente
-                    </td>
-                    <td>
-                        @cita.Fecha
+                        @cita.AreaAtencion
                     </td>
                 </tr>
             }
