--- a/src/Presentation.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/Presentation.WebApp/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     -->
     <link href="//pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--<link href="//cdn.datatables.net/buttons/2.0.1/css/buttons.dataTables.min.css" rel="stylesheet" crossorigin="anonymous" />-->
     <link rel="stylesheet" type="text/css" href="~/lib/datatables/css/jquery.dataTables.css">
     <link rel="stylesheet" type="text/css" href="~/lib/datatables/css/dataTables.bootstrap4.min.css">
