--- a/src/Presentation.WebApp/Views/Shared/Error.cshtml
+++ b/src/Presentation.WebApp/Views/Shared/Error.cshtml
@@ -1,3 +1,7 @@
+@{ 
+    ViewData["Title"] = "Error";
+}
+
 @model ErrorViewModel
 
 <div class="error">
@@ -5,6 +9,8 @@
         <i class="fas fa-exclamation-triangle"></i>
         <h4 class="alert-heading">Error</h4>
         <hr>
-        <p class="mb-0">Un error ha ocurrido, reintente mas tarde y si el problema persiste ontacte con el administrador del sistema.</p>
+        <p class="mb-0">Un error ha ocurrido, reintente mas tarde y si el problema persiste contacte con el administrador del sistema.</p>
+
+    
     </div>
 </div>
