--- a/src/Presentation.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/Presentation.WebApp/Views/Shared/_Layout.cshtml
@@ -216,7 +216,7 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" type="text/javascript" charset="utf8"></script>
     <script src="~/lib/alertifyjs/alertify.min.js"></script>
     <script src="~/js/main.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.js" integrity="sha512-f04GBpoqEZhbyjlRTuXeg8FIHDb+xfCJ0LVdqiN1fEl5B3jz3Z0SPe9IxDumOVdTeeXmKMcMJhb26VuGf1Laqw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
