--- a/src/Presentation.WebApp/Views/Usuarios/MisDatos.cshtml
+++ b/src/Presentation.WebApp/Views/Usuarios/MisDatos.cshtml
@@ -25,7 +25,7 @@
 
 
         </div>
-        <form asp-action="EditarMiInformacion" asp-controller="Home" method="post" enctype="multipart/form-data">
+        <form asp-action="EditarMiInformacion" asp-controller="Usuarios" method="post" enctype="multipart/form-data">
 
             <div class="row mt-3 mb-2">
                 <div class="col">
