Update packages for .net 6

--- a/src/Presentation.WebApp/Views/Usuarios/MisDatos.cshtml
+++ b/src/Presentation.WebApp/Views/Usuarios/MisDatos.cshtml
@@ -121,9 +121,8 @@
                 </div>
                 <div class="col-6">
                     Fotografía:
-                    <input class="form-control form-control-sm" asp-for="FotoFile" accept=".jpg,.png" type="file">
+                    <input class="form-control form-control-sm" accept=".jpg,.png" type="file" asp-for="FotoFile">
                     <span asp-validation-for="FotoFile" class="text-danger"></span>
-
                 </div>
 
             </div>
