--- a/src/Presentation.WebApp/Views/_ViewImports.cshtml
+++ b/src/Presentation.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Presentation.WebApp
 @using Presentation.WebApp.Models
+@using Microsoft.AspNetCore.Http
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
